--- a/donate.html
+++ b/donate.html
@@ -36,7 +36,7 @@
     }
 
     function backToMainMenu(){
-      window.location = "game.html";
+      window.location = "about.html";
     }
 
     function addButton(x1,y1,x2,y2,callback){
@@ -47,7 +47,7 @@
       var canvasWidth = window.innerWidth;
       var canvasHeight = window.innerHeight;
       addButton(132 / 1920 * canvasWidth, 110 / 1080 * canvasHeight, 413 / 1920 * canvasWidth, 193 / 1080 * canvasHeight, backToMainMenu);
-      addButton(382 / 1920 * canvasWidth, 951 / 1080 * canvasHeight, 690 / 1920 * canvasWidth, 1005 / 1080 * canvasHeight, goToDonate);
+      addButton(118 / 1920 * canvasWidth, 315 / 1080 * canvasHeight, 352 / 1920 * canvasWidth, 373 / 1080 * canvasHeight, goToDonate);
     }
 
     function checkButtons(evt){
