--- a/help.html
+++ b/help.html
@@ -9,6 +9,14 @@
 <body onload="init()" id="script">
   <canvas id='c' style='position: absolute; left: 0px; top: 0px; z-index: 2;'></canvas>
   <script>
+    var mute = localStorage.getItem('muteState') || false;
+
+    if (mute === true) {
+      // TODO add mute
+    } else if (mute === false) {
+      // TODO add mute
+    }
+
     var backgroundImage = new Image();
     var ctx;
     var buttons = [];
@@ -24,19 +32,24 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      console.log("loading store background");
       backgroundImage.src = "images/help.png";
       backgroundImage.onload = function() {
         draw();
       }
     }
 
-    function backToMainMenu(){
+    function backToMainMenu() {
       window.location = "game.html";
     }
 
-    function addButton(x1,y1,x2,y2,callback){
-      buttons.push({x1:x1,y1:y1,x2:x2,y2:y2,callback:callback});
+    function addButton(x1, y1, x2, y2, callback) {
+      buttons.push({
+        x1: x1,
+        y1: y1,
+        x2: x2,
+        y2: y2,
+        callback: callback
+      });
     }
 
     function setButtons() {
@@ -45,12 +58,12 @@
       addButton(132 / 1920 * canvasWidth, 110 / 1080 * canvasHeight, 413 / 1920 * canvasWidth, 193 / 1080 * canvasHeight, backToMainMenu);
     }
 
-    function checkButtons(evt){
-			var x = evt.changedTouches[0].pageX;
-			var y = evt.changedTouches[0].pageY;
-      for(var i=0;i<buttons.length;i++){
+    function checkButtons(evt) {
+      var x = evt.changedTouches[0].pageX;
+      var y = evt.changedTouches[0].pageY;
+      for (var i = 0; i < buttons.length; i++) {
         var b = buttons[i];
-        if(x>b.x1 && x<b.x2 && y>b.y1 && y<b.y2){
+        if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
           b.callback();
         }
       }
